imported all instructional images and aligned button correctly
I created and added all of the instructional pictures to the /img folder and then imported them into the help popup.

I also fixed the alignment of the button so it is flush with the call waiter button.

--- a/src/main/resources/static/style/order.css
+++ b/src/main/resources/static/style/order.css
@@ -261,7 +261,6 @@ th, td {
   cursor: pointer;
   width: 120px;
   position: relative;
-  /*left: 100px;*/
   border-radius: 12px;
 }
 
@@ -372,9 +371,9 @@ th, td {
   cursor: pointer;
   width: 120px;
   position: relative;
-  left: 100px;
+  left: 380px;
   border-radius: 12px;
   display: inline;
-  top: -40px;
-
+  top: -42px;
+  text-align: center;
 }
